--- a/accueil_es.html
+++ b/accueil_es.html
@@ -1,80 +1,107 @@
 <!DOCTYPE html>
+<!-- Indique au navigateur que le document est en HTML5 -->
+
 <html lang="es">
+<!-- Début du document HTML, langue principale : espagnol -->
+
 <head>
 <meta charset="UTF-8">
+<!-- Encodage UTF-8 pour gérer accents et caractères spéciaux -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Rend le site responsive sur mobile -->
+
 <title>Portafolio - Inicio</title>
+<!-- Titre affiché dans l’onglet du navigateur -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<!-- Import de la police Google Fonts "Poppins" -->
 
 <style>
+/* ================= VARIABLES CSS ================= */
 :root {
-    --primary: #4f46e5;
-    --secondary: #ff6584;
-    --light-bg: #f5f5f5;
-    --dark-bg: #121212;
-    --text-light: #222;
-    --text-dark: #e0e0e0;
-    --glow-light: rgba(79,70,229,0.5);
-    --glow-dark: rgba(255,101,132,0.6);
+    --primary: #4f46e5;        /* Couleur principale */
+    --secondary: #ff6584;      /* Couleur secondaire */
+    --light-bg: #f5f5f5;       /* Fond clair */
+    --dark-bg: #121212;        /* Fond sombre */
+    --text-light: #222;        /* Texte clair */
+    --text-dark: #e0e0e0;      /* Texte sombre */
+    --glow-light: rgba(79,70,229,0.5); /* Effet lumineux clair */
+    --glow-dark: rgba(255,101,132,0.6); /* Effet lumineux sombre */
 }
 
-* { box-sizing: border-box; margin: 0; padding: 0; }
+/* Reset CSS : supprime marges et padding par défaut */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+/* ================= BODY ================= */
 body {
-    font-family: 'Poppins', sans-serif;
-    background: var(--light-bg);
-    color: var(--text-light);
-    transition: 0.3s;
-    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif; /* Police principale */
+    background: var(--light-bg);        /* Fond clair par défaut */
+    color: var(--text-light);            /* Couleur du texte */
+    transition: 0.3s;                    /* Animation fluide */
+    overflow-x: hidden;                  /* Supprime scroll horizontal */
     position: relative;
 }
+
+/* Mode sombre */
 body.dark {
     background: var(--dark-bg);
     color: var(--text-dark);
 }
 
+/* ================= FOND ANIMÉ ================= */
 #background {
-    position: fixed;
-    inset: 0;
-    z-index: 0;
-    pointer-events: none;
+    position: fixed;      /* Fixé à l’écran */
+    inset: 0;             /* Prend toute la surface */
+    z-index: 0;            /* Derrière le contenu */
+    pointer-events: none;  /* N’intercepte pas les clics */
 }
 
+/* ================= HEADER ================= */
 header {
-    position: fixed;
+    position: fixed;      /* Toujours visible en haut */
     top: 0;
     width: 100%;
     padding: 20px 50px;
-    display: flex;
-    justify-content: space-between;
+    display: flex;        /* Flexbox */
+    justify-content: space-between; /* Espace entre éléments */
     align-items: center;
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px); /* Effet verre */
     background: rgba(255,255,255,0.9);
     border-bottom: 1px solid #ccc;
     z-index: 1000;
     transition: 0.3s;
 }
+
+/* Header en mode sombre */
 body.dark header {
     background: rgba(18,18,18,0.9);
     border-color: #333;
 }
 
+/* Nom dans le header */
 header h1 {
     font-size: 1.8rem;
     font-weight: 700;
-    opacity: 0;
-    transform: translateY(40px);
+    opacity: 0;                   /* Invisible au départ */
+    transform: translateY(40px); /* Décalage vertical */
     transition: all 0.8s ease-out;
 }
 
+/* ================= NAVIGATION ================= */
 nav a {
     margin-left: 30px;
-    color: inherit;
-    text-decoration: none;
+    color: inherit;          /* Hérite de la couleur */
+    text-decoration: none;   /* Supprime soulignement */
     font-weight: 500;
     position: relative;
 }
+
+/* Ligne animée sous les liens */
 nav a::after {
     content: "";
     position: absolute;
@@ -85,17 +112,26 @@ nav a::after {
     background: var(--primary);
     transition: 0.3s;
 }
-body.dark nav a::after { background: var(--secondary); }
-nav a:hover::after,
-nav a.active::after { width: 100%; }
 
-/* Conteneur boutons thème et langue côte à côte */
+/* Couleur différente en mode sombre */
+body.dark nav a::after {
+    background: var(--secondary);
+}
+
+/* Ligne visible au hover ou page active */
+nav a:hover::after,
+nav a.active::after {
+    width: 100%;
+}
+
+/* ================= BOUTONS HEADER ================= */
 .header-buttons {
     display: flex;
     gap: 10px;
     align-items: center;
 }
 
+/* Boutons thème et langue */
 .theme-toggle,
 .lang-toggle {
     padding: 10px 20px;
@@ -107,19 +143,24 @@ nav a.active::after { width: 100%; }
     font-weight: 600;
     transition: transform 0.3s, box-shadow 0.3s;
 }
+
+/* Effet au survol */
 .theme-toggle:hover,
 .lang-toggle:hover {
     transform: scale(1.2) rotate(6deg);
     box-shadow: 0 0 25px var(--glow-light);
 }
+
+/* Effet différent en mode sombre */
 body.dark .theme-toggle:hover,
 body.dark .lang-toggle:hover {
     box-shadow: 0 0 30px var(--glow-dark);
 }
 
+/* ================= MAIN ================= */
 main {
-    min-height: 100vh;
-    padding: 140px 20px 50px;
+    min-height: 100vh;         /* Hauteur écran */
+    padding: 140px 20px 50px;  /* Espace pour le header */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -129,6 +170,7 @@ main {
     z-index: 1;
 }
 
+/* Titre principal */
 main h2 {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -136,15 +178,22 @@ main h2 {
     transform: translateY(40px);
     transition: all 0.8s ease-out;
 }
+
+/* Classe ajoutée par JavaScript */
 h2.show {
     opacity: 1;
     transform: translateY(0);
-    text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light);
-}
-body.dark h2.show {
-    text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark);
+    text-shadow: 0 0 5px var(--glow-light),
+                 0 0 10px var(--glow-light);
 }
 
+/* Glow sombre */
+body.dark h2.show {
+    text-shadow: 0 0 5px var(--glow-dark),
+                 0 0 10px var(--glow-dark);
+}
+
+/* Paragraphe */
 main p {
     font-size: 1.2rem;
     max-width: 700px;
@@ -154,6 +203,7 @@ main p {
     transition: all 0.8s ease-out;
 }
 
+/* Bouton principal */
 .button {
     padding: 15px 40px;
     border-radius: 50px;
@@ -165,10 +215,14 @@ main p {
     overflow: hidden;
     transition: transform .3s, box-shadow .3s;
 }
+
+/* Animation hover */
 .button:hover {
     transform: scale(1.1) translateY(-3px);
     box-shadow: 0 10px 20px rgba(0,0,0,.25);
 }
+
+/* Effet lumière */
 .button::after {
     content: '';
     position: absolute;
@@ -180,11 +234,14 @@ main p {
     transform: rotate(45deg);
     transition: .5s;
 }
+
+/* Animation lumière */
 .button:hover::after {
     left: 100%;
     top: 100%;
 }
 
+/* ================= FOOTER ================= */
 footer {
     text-align: center;
     padding: 30px 0;
@@ -192,29 +249,42 @@ footer {
     position: relative;
     z-index: 1;
 }
-body.dark footer { border-color: #333; }
 
+/* Footer sombre */
+body.dark footer {
+    border-color: #333;
+}
+
+/* ================= ANIMATION DES CERCLES ================= */
 @keyframes moveCircle {
-    from { transform: translateY(0) rotate(0deg); }
-    to { transform: translateY(50px) rotate(360deg); }
+    from {
+        transform: translateY(0) rotate(0deg);
+    }
+    to {
+        transform: translateY(50px) rotate(360deg);
+    }
 }
 </style>
 </head>
 
 <body>
 
+<!-- Conteneur du fond animé -->
 <div id="background"></div>
 
 <header>
     <h1>Lucas Lara Peyrière</h1>
+
+    <!-- Navigation -->
     <nav>
         <a href="accueil_es.html" class="active">Inicio</a>
         <a href="competencias_es.html">Competencias</a>
         <a href="proyectos_es.html">Proyectos</a>
         <a href="contacto_es.html">Contacto</a>
     </nav>
+
+    <!-- Boutons thème et langue -->
     <div class="header-buttons">
-        <!-- Bouton thème à gauche, langue à droite -->
         <button class="theme-toggle">🌙</button>
         <button class="lang-toggle" id="langToggle">FR</button>
     </div>
@@ -222,63 +292,109 @@ body.dark footer { border-color: #333; }
 
 <main>
     <h2>Bienvenido a mi portafolio</h2>
-    <p>Soy un apasionado de la informática, el software y la programación. Me gustaría trabajar en ciberseguridad. También puedes ver mis otros proyectos en mi perfil de <a href="https://github.com/LucasLP-prog">Github</a></p>
+    <p>
+        Soy un apasionado de la informática, el software y la programación.
+        Me gustaría trabajar en ciberseguridad.
+        También puedes ver mis proyectos en
+        <a href="https://github.com/LucasLP-prog">Github</a>.
+    </p>
     <a href="contacto_es.html" class="button">Contactarme</a>
 </main>
 
-<footer>© 2025 Lucas Lara Peyrière – Todos los derechos reservados</footer>
+<footer>
+    © 2025 Lucas Lara Peyrière – Todos los derechos reservados
+</footer>
 
 <script>
+// ================= THEME =================
+
+// Sélection du bouton thème
 const toggle = document.querySelector('.theme-toggle');
+
+// Récupération du thème sauvegardé
 const savedTheme = localStorage.getItem('theme');
+
+// Applique le thème sombre si sauvegardé
 if (savedTheme === 'dark') {
     document.body.classList.add('dark');
     toggle.textContent = '☀️';
 }
+
+// Changement de thème au clic
 toggle.addEventListener('click', () => {
     document.body.classList.toggle('dark');
     toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
-    localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
-    generateCircles();
+    localStorage.setItem(
+        'theme',
+        document.body.classList.contains('dark') ? 'dark' : 'light'
+    );
+    generateCircles(); // Régénère les cercles
 });
+
+// ================= CERCLES =================
 function generateCircles() {
     const bg = document.getElementById('background');
-    bg.innerHTML = '';
+    bg.innerHTML = ''; // Supprime les anciens cercles
+
     for (let i = 0; i < 30; i++) {
         const circle = document.createElement('div');
         const size = Math.random() * 8 + 2;
+
         circle.style.width = `${size}px`;
         circle.style.height = `${size}px`;
         circle.style.borderRadius = '50%';
         circle.style.position = 'absolute';
         circle.style.top = `${Math.random() * 100}%`;
         circle.style.left = `${Math.random() * 100}%`;
-        circle.style.backgroundColor = document.body.classList.contains('dark')
-            ? 'rgba(255,101,132,0.5)'
-            : 'rgba(79,70,229,0.3)';
+        circle.style.backgroundColor =
+            document.body.classList.contains('dark')
+                ? 'rgba(255,101,132,0.5)'
+                : 'rgba(79,70,229,0.3)';
         const duration = Math.random() * 5 + 5;
-        circle.style.animation = `moveCircle ${duration}s linear infinite alternate`;
+        circle.style.animation =
+            `moveCircle ${duration}s linear infinite alternate`;
+
         bg.appendChild(circle);
     }
 }
+
+// ================= ANIMATIONS AU CHARGEMENT =================
 window.addEventListener('load', () => {
     generateCircles();
+
     const h1 = document.querySelector('header h1');
     const h2 = document.querySelector('main h2');
     const p = document.querySelector('main p');
-    setTimeout(() => { h1.style.opacity = 1; h1.style.transform = 'translateY(0)'; }, 100);
-    setTimeout(() => { h2.classList.add('show'); }, 400);
-    setTimeout(() => { p.style.opacity = 1; p.style.transform = 'translateY(0)'; }, 700);
+
+    setTimeout(() => {
+        h1.style.opacity = 1;
+        h1.style.transform = 'translateY(0)';
+    }, 100);
+
+    setTimeout(() => {
+        h2.classList.add('show');
+    }, 400);
+
+    setTimeout(() => {
+        p.style.opacity = 1;
+        p.style.transform = 'translateY(0)';
+    }, 700);
 });
+
+// ================= LANGUE =================
 const langBtn = document.querySelector('.lang-toggle');
 const savedLang = localStorage.getItem('lang') || 'fr';
 const page = window.location.pathname.split('/').pop();
+
+// Correspondance pages FR / ES
 const pages = {
   accueil: { fr: 'accueil_fr.html', es: 'accueil_es.html' },
   competences: { fr: 'competences_fr.html', es: 'competencias_es.html' },
   projets: { fr: 'projets_fr.html', es: 'proyectos_es.html' },
   contact: { fr: 'contact_fr.html', es: 'contacto_es.html' }
 };
+
+// Détecte la page actuelle
 let currentKey = null;
 for (const key in pages) {
   if (Object.values(pages[key]).includes(page)) {
@@ -286,17 +402,26 @@ for (const key in pages) {
     break;
   }
 }
+
+// Met à jour le texte du bouton langue
 langBtn.textContent = savedLang.toUpperCase();
+
+// Redirection automatique si mauvaise langue
 if (currentKey && pages[currentKey][savedLang] !== page) {
   window.location.replace(pages[currentKey][savedLang]);
 }
+
+// Changement de langue au clic
 langBtn.addEventListener('click', () => {
   const newLang = savedLang === 'fr' ? 'es' : 'fr';
   localStorage.setItem('lang', newLang);
+
   if (currentKey) {
     window.location.href = pages[currentKey][newLang];
   }
 });
+
+// Synchronisation entre onglets
 window.addEventListener('storage', (e) => {
   if (e.key === 'lang') {
     location.reload();
