--- a/competences_fr.html
+++ b/competences_fr.html
@@ -1,55 +1,91 @@
 <!DOCTYPE html>
+<!-- Indique au navigateur que le document est en HTML5 -->
+
 <html lang="fr">
+<!-- Début du document HTML, langue principale : français -->
+
 <head>
 <meta charset="UTF-8">
+<!-- Encodage UTF-8 (accents, caractères spéciaux, etc.) -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Permet un affichage responsive sur mobile -->
+
 <title>Portfolio - Compétences</title>
+<!-- Titre affiché dans l’onglet du navigateur -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<!-- Import de la police Google Fonts "Poppins" -->
 
 <style>
+/* ================= VARIABLES GLOBALES ================= */
 :root {
-    --primary: #4f46e5;
-    --secondary: #ff6584;
-    --light-bg: #f5f5f5;
-    --dark-bg: #121212;
-    --light-card: #fff;
-    --dark-card: #1e1e1e;
-    --text-light: #222;
-    --text-dark: #e0e0e0;
-    --glow-light: rgba(79,70,229,0.5);
-    --glow-dark: rgba(255,101,132,0.6);
+    --primary: #4f46e5;          /* Couleur principale */
+    --secondary: #ff6584;        /* Couleur secondaire */
+    --light-bg: #f5f5f5;         /* Fond clair */
+    --dark-bg: #121212;          /* Fond sombre */
+    --light-card: #fff;          /* Carte claire */
+    --dark-card: #1e1e1e;        /* Carte sombre */
+    --text-light: #222;          /* Texte clair */
+    --text-dark: #e0e0e0;        /* Texte sombre */
+    --glow-light: rgba(79,70,229,0.5); /* Glow clair */
+    --glow-dark: rgba(255,101,132,0.6); /* Glow sombre */
 }
 
-* { box-sizing: border-box; margin: 0; padding: 0; }
+/* Reset CSS */
+* {
+    box-sizing: border-box; /* Inclut padding/border dans la taille */
+    margin: 0;              /* Supprime marges */
+    padding: 0;             /* Supprime padding */
+}
 
+/* ================= BODY ================= */
 body {
-    font-family: 'Poppins', sans-serif;
-    background: var(--light-bg);
-    color: var(--text-light);
-    transition: 0.3s;
-    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif; /* Police principale */
+    background: var(--light-bg);        /* Fond clair */
+    color: var(--text-light);            /* Texte clair */
+    transition: 0.3s;                    /* Transition douce */
+    overflow-x: hidden;                  /* Supprime scroll horizontal */
 }
-body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
+/* Mode sombre */
+body.dark {
+    background: var(--dark-bg);
+    color: var(--text-dark);
+}
+
+/* ================= HEADER ================= */
 header {
-    position: fixed;
+    position: fixed;          /* Toujours visible */
     top: 0;
     width: 100%;
     padding: 20px 50px;
-    display: flex;
-    justify-content: space-between;
+    display: flex;            /* Flexbox */
+    justify-content: space-between; /* Espace entre éléments */
     align-items: center;
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px); /* Effet verre */
     background: rgba(255,255,255,0.9);
     border-bottom: 1px solid #ccc;
     z-index: 1000;
     transition: 0.3s;
 }
-body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
 
-header h1 { font-size: 1.8rem; font-weight: 700; opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
+/* Header sombre */
+body.dark header {
+    background: rgba(18,18,18,0.9);
+    border-color: #333;
+}
 
+/* Nom */
+header h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    opacity: 0;                    /* Caché au départ */
+    transform: translateY(40px);  /* Décalé vers le bas */
+    transition: all 0.8s ease-out;
+}
+
+/* ================= NAVIGATION ================= */
 nav a {
     margin-left: 30px;
     color: inherit;
@@ -57,17 +93,31 @@ nav a {
     font-weight: 500;
     position: relative;
 }
+
+/* Soulignement animé */
 nav a::after {
     content: "";
     position: absolute;
-    left: 0; bottom: -6px; width: 0%; height: 2px;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 2px;
     background: var(--primary);
     transition: 0.3s;
 }
-body.dark nav a::after { background: var(--secondary); }
-nav a:hover::after, nav a.active::after { width: 100%; }
 
-/* Conteneur boutons thème et langue côte à côte */
+/* Couleur sombre */
+body.dark nav a::after {
+    background: var(--secondary);
+}
+
+/* Hover et lien actif */
+nav a:hover::after,
+nav a.active::after {
+    width: 100%;
+}
+
+/* ================= BOUTONS HEADER ================= */
 .header-buttons {
     display: flex;
     gap: 10px;
@@ -85,16 +135,21 @@ nav a:hover::after, nav a.active::after { width: 100%; }
     background: linear-gradient(45deg, var(--primary), var(--secondary));
     transition: transform 0.3s, box-shadow 0.3s;
 }
+
+/* Animation hover */
 .theme-toggle:hover,
 .lang-toggle:hover {
     transform: scale(1.2) rotate(6deg);
     box-shadow: 0 0 25px var(--glow-light);
 }
+
+/* Glow sombre */
 body.dark .theme-toggle:hover,
 body.dark .lang-toggle:hover {
     box-shadow: 0 0 30px var(--glow-dark);
 }
 
+/* ================= MAIN ================= */
 main {
     min-height: 100vh;
     padding: 140px 20px 50px;
@@ -105,13 +160,30 @@ main {
     text-align: center;
 }
 
-main h2 { font-size: 3rem; margin-bottom: 20px; opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
-h2.show {
-    opacity: 1; transform: translateY(0);
-    text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light);
+/* Titre principal */
+main h2 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
-body.dark h2.show { text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark); }
 
+/* Classe ajoutée en JS */
+h2.show {
+    opacity: 1;
+    transform: translateY(0);
+    text-shadow: 0 0 5px var(--glow-light),
+                 0 0 10px var(--glow-light);
+}
+
+/* Glow sombre */
+body.dark h2.show {
+    text-shadow: 0 0 5px var(--glow-dark),
+                 0 0 10px var(--glow-dark);
+}
+
+/* ================= CARTES ================= */
 .cards {
     width: 100%;
     max-width: 1000px;
@@ -121,6 +193,7 @@ body.dark h2.show { text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-d
     margin-top: 20px;
 }
 
+/* Carte individuelle */
 .card {
     background: var(--light-card);
     padding: 30px;
@@ -131,45 +204,80 @@ body.dark h2.show { text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-d
     opacity: 0;
     transform: translateY(40px);
 }
+
+/* Carte sombre */
 body.dark .card {
     background: var(--dark-card);
     box-shadow: 0 8px 20px rgba(0,0,0,0.5);
 }
 
-/* Effet lumineux autour des cartes lors du survol */
-.card.show { opacity: 1; transform: translateY(0); }
-.card:hover { 
+/* Carte visible */
+.card.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* Hover carte */
+.card:hover {
     transform: translateY(-10px);
     box-shadow: 0 15px 35px var(--glow-light);
 }
-body.dark .card:hover { box-shadow: 0 15px 35px var(--glow-dark); }
 
-.card h3, .card p { opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
-.card h3.show, .card p.show { opacity: 1; transform: translateY(0); }
+/* Hover sombre */
+body.dark .card:hover {
+    box-shadow: 0 15px 35px var(--glow-dark);
+}
 
+/* Animation texte cartes */
+.card h3,
+.card p {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+.card h3.show,
+.card p.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* ================= FOOTER ================= */
 footer {
     text-align: center;
     padding: 30px 0;
     border-top: 1px solid #ccc;
 }
-body.dark footer { border-color: #333; }
+body.dark footer {
+    border-color: #333;
+}
 
+/* ================= RESPONSIVE ================= */
 @media(max-width:768px) {
-    header { padding: 15px 20px; }
-    nav a { margin-left: 15px; font-size: 0.9rem; }
+    header {
+        padding: 15px 20px;
+    }
+    nav a {
+        margin-left: 15px;
+        font-size: 0.9rem;
+    }
 }
 </style>
 </head>
 
 <body>
+
 <header>
     <h1>Lucas Lara Peyrière</h1>
+
+    <!-- Navigation -->
     <nav>
         <a href="accueil_fr.html">Accueil</a>
         <a href="competences_fr.html" class="active">Compétences</a>
         <a href="projets_fr.html">Projets</a>
         <a href="contact_fr.html">Contact</a>
     </nav>
+
+    <!-- Boutons thème / langue -->
     <div class="header-buttons">
         <button class="theme-toggle">🌙</button>
         <button class="lang-toggle">ES</button>
@@ -178,74 +286,132 @@ body.dark footer { border-color: #333; }
 
 <main>
     <h2>Mes Compétences</h2>
+
+    <!-- Conteneur des cartes -->
     <div class="cards">
         <div class="card">
             <h3>Programmation</h3>
             <p>HTML, CSS, JavaScript, C/C++</p>
         </div>
+
         <div class="card">
             <h3>Travail manuel</h3>
             <p>Réparation de téléphones et dépannages électroniques</p>
         </div>
+
         <div class="card">
             <h3>Musiques</h3>
             <p>Petites productions et utilisation de logiciels audio</p>
         </div>
+
         <div class="card">
             <h3>Bilingue</h3>
-            <p>Je parle couramment espagnol et donc je peux faire des sites en espagnol</p>
+            <p>Je parle couramment espagnol et je peux créer des sites en espagnol</p>
         </div>
     </div>
 </main>
 
-<footer>© 2025 Lucas Lara Peyrière – Tous droits réservés</footer>
+<footer>
+    © 2025 Lucas Lara Peyrière – Tous droits réservés
+</footer>
 
 <script>
+// ================= THEME =================
 const toggle = document.querySelector('.theme-toggle');
 const langBtn = document.querySelector('.lang-toggle');
 
-/* ---------- THEME ---------- */
+// Récupération du thème sauvegardé
 const savedTheme = localStorage.getItem('theme');
-if(savedTheme==='dark'){ document.body.classList.add('dark'); toggle.textContent='☀️'; }
-toggle.addEventListener('click', ()=>{
+
+// Applique le thème sombre
+if (savedTheme === 'dark') {
+    document.body.classList.add('dark');
+    toggle.textContent = '☀️';
+}
+
+// Changement de thème
+toggle.addEventListener('click', () => {
     document.body.classList.toggle('dark');
-    toggle.textContent = document.body.classList.contains('dark')?'☀️':'🌙';
-    localStorage.setItem('theme', document.body.classList.contains('dark')?'dark':'light');
+    toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+    localStorage.setItem(
+        'theme',
+        document.body.classList.contains('dark') ? 'dark' : 'light'
+    );
 });
 
-/* ---------- LANGUE ---------- */
+// ================= LANGUE =================
 const savedLang = localStorage.getItem('lang') || 'fr';
 const page = window.location.pathname.split('/').pop();
-const pages = { accueil:{fr:'accueil_fr.html',es:'accueil_es.html'}, competences:{fr:'competences_fr.html',es:'competencias_es.html'}, projets:{fr:'projets_fr.html',es:'proyectos_es.html'}, contact:{fr:'contact_fr.html',es:'contacto_es.html'} };
-let currentKey = null; for(const key in pages){ if(Object.values(pages[key]).includes(page)) currentKey=key; }
-langBtn.textContent = savedLang.toUpperCase();
-if(currentKey && pages[currentKey][savedLang]!==page){ window.location.replace(pages[currentKey][savedLang]); }
-langBtn.addEventListener('click', ()=>{
-    const newLang = savedLang==='fr'?'es':'fr';
-    localStorage.setItem('lang',newLang);
-    if(currentKey) window.location.href = pages[currentKey][newLang];
-});
-window.addEventListener('storage',(e)=>{ if(e.key==='lang'){ location.reload(); } });
 
-/* ---------- ANIMATIONS ---------- */
-window.addEventListener('load',()=>{
+// Correspondance pages FR / ES
+const pages = {
+    accueil: { fr: 'accueil_fr.html', es: 'accueil_es.html' },
+    competences: { fr: 'competences_fr.html', es: 'competencias_es.html' },
+    projets: { fr: 'projets_fr.html', es: 'proyectos_es.html' },
+    contact: { fr: 'contact_fr.html', es: 'contacto_es.html' }
+};
+
+// Détecte la page actuelle
+let currentKey = null;
+for (const key in pages) {
+    if (Object.values(pages[key]).includes(page)) {
+        currentKey = key;
+    }
+}
+
+// Met à jour le bouton langue
+langBtn.textContent = savedLang.toUpperCase();
+
+// Redirection automatique
+if (currentKey && pages[currentKey][savedLang] !== page) {
+    window.location.replace(pages[currentKey][savedLang]);
+}
+
+// Changement langue au clic
+langBtn.addEventListener('click', () => {
+    const newLang = savedLang === 'fr' ? 'es' : 'fr';
+    localStorage.setItem('lang', newLang);
+    if (currentKey) {
+        window.location.href = pages[currentKey][newLang];
+    }
+});
+
+// Synchronisation entre onglets
+window.addEventListener('storage', (e) => {
+    if (e.key === 'lang') {
+        location.reload();
+    }
+});
+
+// ================= ANIMATIONS =================
+window.addEventListener('load', () => {
     const h1 = document.querySelector('header h1');
     const h2 = document.querySelector('main h2');
     const cards = document.querySelectorAll('.card');
 
-    setTimeout(()=>{h1.style.opacity=1; h1.style.transform='translateY(0)';},100);
-    setTimeout(()=>{h2.classList.add('show');},400);
+    // Animation du nom
+    setTimeout(() => {
+        h1.style.opacity = 1;
+        h1.style.transform = 'translateY(0)';
+    }, 100);
 
-    cards.forEach((card,i)=>{
-        setTimeout(()=>{
+    // Animation du titre
+    setTimeout(() => {
+        h2.classList.add('show');
+    }, 400);
+
+    // Animation des cartes une par une
+    cards.forEach((card, i) => {
+        setTimeout(() => {
             card.classList.add('show');
             const h3 = card.querySelector('h3');
             const p = card.querySelector('p');
-            setTimeout(()=>{h3.classList.add('show');},100);
-            setTimeout(()=>{p.classList.add('show');},300);
-        },700 + i*200);
+            setTimeout(() => h3.classList.add('show'), 100);
+            setTimeout(() => p.classList.add('show'), 300);
+        }, 700 + i * 200);
     });
 });
 </script>
+
 </body>
 </html>
