--- a/competencias_es.html
+++ b/competencias_es.html
@@ -1,120 +1,269 @@
 <!DOCTYPE html>
+<!-- Indica que el documento está en HTML5 -->
+
 <html lang="es">
+<!-- Inicio del documento HTML, idioma principal: español -->
+
 <head>
 <meta charset="UTF-8">
+<!-- Codificación UTF-8 para caracteres especiales y acentos -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Permite un diseño responsivo en móviles -->
+
 <title>Portafolio - Competencias</title>
+<!-- Título que aparece en la pestaña del navegador -->
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<!-- Importa la fuente Google Fonts "Poppins" -->
+
 <style>
+/* ================= VARIABLES GLOBALES ================= */
 :root {
-    --primary: #4f46e5;
-    --secondary: #ff6584;
-    --light-bg: #f5f5f5;
-    --dark-bg: #121212;
-    --light-card: #fff;
-    --dark-card: #1e1e1e;
-    --text-light: #222;
-    --text-dark: #e0e0e0;
-    --glow-light: rgba(79,70,229,0.5);
-    --glow-dark: rgba(255,101,132,0.6);
+    --primary: #4f46e5;           /* Color principal */
+    --secondary: #ff6584;         /* Color secundario */
+    --light-bg: #f5f5f5;          /* Fondo claro */
+    --dark-bg: #121212;           /* Fondo oscuro */
+    --light-card: #fff;           /* Fondo tarjeta clara */
+    --dark-card: #1e1e1e;         /* Fondo tarjeta oscura */
+    --text-light: #222;           /* Color texto claro */
+    --text-dark: #e0e0e0;         /* Color texto oscuro */
+    --glow-light: rgba(79,70,229,0.5); /* Efecto resplandor claro */
+    --glow-dark: rgba(255,101,132,0.6); /* Efecto resplandor oscuro */
 }
 
-* { box-sizing: border-box; margin: 0; padding: 0; }
+/* Reset de márgenes y padding */
+* { 
+    box-sizing: border-box; /* Incluye padding y border en tamaño */
+    margin: 0; 
+    padding: 0; 
+}
 
+/* ================= BODY ================= */
 body {
-    font-family: 'Poppins', sans-serif;
-    background: var(--light-bg);
-    color: var(--text-light);
-    transition: 0.3s;
-    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif; /* Fuente principal */
+    background: var(--light-bg);        /* Fondo claro */
+    color: var(--text-light);           /* Color de texto */
+    transition: 0.3s;                   /* Transición suave para cambios */
+    overflow-x: hidden;                 /* Evita scroll horizontal */
 }
-body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
+/* Modo oscuro */
+body.dark { 
+    background: var(--dark-bg); 
+    color: var(--text-dark); 
+}
+
+/* ================= HEADER ================= */
 header {
-    position: fixed; top: 0; width: 100%; padding: 20px 50px;
-    display: flex; justify-content: space-between; align-items: center;
-    backdrop-filter: blur(12px); background: rgba(255,255,255,0.9);
-    border-bottom: 1px solid #ccc; z-index: 1000; transition: 0.3s;
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+    padding: 20px 50px;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    backdrop-filter: blur(12px); /* Efecto vidrio difuso */
+    background: rgba(255,255,255,0.9);
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+    transition: 0.3s;
 }
-body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
 
-header h1 { font-size: 1.8rem; font-weight: 700; opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
+/* Header modo oscuro */
+body.dark header { 
+    background: rgba(18,18,18,0.9); 
+    border-color: #333; 
+}
 
+/* Título del header */
+header h1 { 
+    font-size: 1.8rem; 
+    font-weight: 700; 
+    opacity: 0;                   /* Oculto al inicio */
+    transform: translateY(40px); /* Desplazado hacia abajo */
+    transition: all 0.8s ease-out; 
+}
+
+/* ================= NAV ================= */
 nav a {
-    margin-left: 30px; color: inherit; text-decoration: none; font-weight: 500; position: relative;
+    margin-left: 30px; 
+    color: inherit; 
+    text-decoration: none; 
+    font-weight: 500; 
+    position: relative; 
 }
+
+/* Subrayado animado */
 nav a::after {
-    content: ""; position: absolute; left: 0; bottom: -6px; width: 0; height: 2px;
-    background: var(--primary); transition: width 0.4s ease;
+    content: ""; 
+    position: absolute; 
+    left: 0; 
+    bottom: -6px; 
+    width: 0; 
+    height: 2px;
+    background: var(--primary); 
+    transition: width 0.4s ease;
 }
-body.dark nav a::after { background: var(--secondary); }
+
+/* Subrayado modo oscuro */
+body.dark nav a::after { 
+    background: var(--secondary); 
+}
+
+/* Hover y link activo */
 nav a:hover::after, nav a.active::after { width: 100%; }
 
-/* Conteneur boutons thème et langue côte à côte */
+/* ================= BOTONES HEADER ================= */
 .header-buttons {
-    display: flex;
-    gap: 10px;
-    align-items: center;
+    display: flex; 
+    gap: 10px; 
+    align-items: center; 
 }
 
+/* Botones tema y idioma */
 .theme-toggle, .lang-toggle {
-    padding: 10px 20px; border-radius: 50px; border: none; cursor: pointer;
-    font-weight: 600; transition: transform 0.3s, box-shadow 0.3s;
+    padding: 10px 20px; 
+    border-radius: 50px; 
+    border: none; 
+    cursor: pointer;
+    font-weight: 600; 
+    transition: transform 0.3s, box-shadow 0.3s;
     background: linear-gradient(45deg, var(--primary), var(--secondary));
     color: #fff;
 }
+
+/* Hover botones */
 .theme-toggle:hover, .lang-toggle:hover {
     transform: scale(1.2) rotate(6deg);
     box-shadow: 0 0 25px var(--glow-light);
 }
+
+/* Hover modo oscuro */
 body.dark .theme-toggle:hover, body.dark .lang-toggle:hover {
     box-shadow: 0 0 30px var(--glow-dark);
 }
 
+/* ================= MAIN ================= */
 main {
-    min-height: 100vh; padding: 140px 20px 50px; display: flex;
-    flex-direction: column; align-items: center; justify-content: center; text-align: center;
+    min-height: 100vh; 
+    padding: 140px 20px 50px; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    text-align: center;
 }
-main h2 { font-size: 3rem; margin-bottom: 20px; opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
-h2.show { opacity: 1; transform: translateY(0); text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light); }
-body.dark h2.show { text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark); }
 
+/* Título principal */
+main h2 { 
+    font-size: 3rem; 
+    margin-bottom: 20px; 
+    opacity: 0; 
+    transform: translateY(40px); 
+    transition: all 0.8s ease-out; 
+}
+
+/* Clase JS para mostrar el título */
+h2.show { 
+    opacity: 1; 
+    transform: translateY(0); 
+    text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light); 
+}
+
+/* Glow modo oscuro */
+body.dark h2.show { 
+    text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark); 
+}
+
+/* ================= CARDS ================= */
 .cards {
-    width: 100%; max-width: 1000px; display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-top: 20px;
+    width: 100%; 
+    max-width: 1000px; 
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    gap: 30px; 
+    margin-top: 20px;
 }
+
+/* Tarjeta individual */
 .card {
-    background: var(--light-card); padding: 30px; border-radius: 20px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.1); text-align: center; transition: 0.3s;
-    opacity: 0; transform: translateY(40px);
+    background: var(--light-card); 
+    padding: 30px; 
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1); 
+    text-align: center; 
+    transition: 0.3s;
+    opacity: 0; 
+    transform: translateY(40px);
 }
-body.dark .card { background: var(--dark-card); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
-.card.show { opacity: 1; transform: translateY(0); }
-.card:hover { transform: translateY(-10px); box-shadow: 0 15px 35px var(--glow-light); }
-body.dark .card:hover { box-shadow: 0 15px 35px var(--glow-dark); }
 
-.card h3, .card p { opacity: 0; transform: translateY(40px); transition: all 0.8s ease-out; }
-.card h3.show, .card p.show { opacity: 1; transform: translateY(0); }
+/* Tarjeta modo oscuro */
+body.dark .card { 
+    background: var(--dark-card); 
+    box-shadow: 0 8px 20px rgba(0,0,0,0.5); 
+}
 
-footer { text-align: center; padding: 30px 0; border-top: 1px solid #ccc; }
-body.dark footer { border-color: #333; }
+/* Mostrar tarjeta */
+.card.show { 
+    opacity: 1; 
+    transform: translateY(0); 
+}
 
+/* Hover tarjeta */
+.card:hover { 
+    transform: translateY(-10px); 
+    box-shadow: 0 15px 35px var(--glow-light); 
+}
+
+/* Hover modo oscuro */
+body.dark .card:hover { 
+    box-shadow: 0 15px 35px var(--glow-dark); 
+}
+
+/* Animación del texto dentro de la tarjeta */
+.card h3, .card p { 
+    opacity: 0; 
+    transform: translateY(40px); 
+    transition: all 0.8s ease-out; 
+}
+.card h3.show, .card p.show { 
+    opacity: 1; 
+    transform: translateY(0); 
+}
+
+/* ================= FOOTER ================= */
+footer { 
+    text-align: center; 
+    padding: 30px 0; 
+    border-top: 1px solid #ccc; 
+}
+body.dark footer { 
+    border-color: #333; 
+}
+
+/* ================= RESPONSIVE ================= */
 @media(max-width:768px) {
     header { padding: 15px 20px; }
     nav a { margin-left: 15px; font-size: 0.9rem; }
 }
 </style>
 </head>
+
 <body>
 
 <header>
     <h1>Lucas Lara Peyrière</h1>
+
+    <!-- Navegación -->
     <nav>
         <a href="accueil_es.html">Inicio</a>
         <a href="competencias_es.html" class="active">Competencias</a>
         <a href="proyectos_es.html">Proyectos</a>
         <a href="contacto_es.html">Contacto</a>
     </nav>
+
+    <!-- Botones de tema y idioma -->
     <div class="header-buttons">
         <button class="theme-toggle">🌙</button>
         <button class="lang-toggle">FR</button>
@@ -123,29 +272,49 @@ body.dark footer { border-color: #333; }
 
 <main>
     <h2>Mis Competencias</h2>
-    <div class="cards">
-        <div class="card"><h3>Programación</h3><p>Varios lenguajes de programación (HTML, CSS, JavaScript, C/C++)</p></div>
-        <div class="card"><h3>Trabajo manual</h3><p>Reparación de teléfonos y mantenimiento de dispositivos electrónicos</p></div>
-        <div class="card"><h3>Música</h3><p>Creo pequeñas producciones y sé utilizar algunos programas.</p></div>
-        <div class="card"><h3>Bilingüe</h3><p>Hablo español con fluidez, por lo que puedo crear sitios en español.</p>
-</div>
 
+    <div class="cards">
+        <div class="card">
+            <h3>Programación</h3>
+            <p>Varios lenguajes de programación (HTML, CSS, JavaScript, C/C++)</p>
+        </div>
+        <div class="card">
+            <h3>Trabajo manual</h3>
+            <p>Reparación de teléfonos y mantenimiento de dispositivos electrónicos</p>
+        </div>
+        <div class="card">
+            <h3>Música</h3>
+            <p>Creo pequeñas producciones y sé utilizar algunos programas.</p>
+        </div>
+        <div class="card">
+            <h3>Bilingüe</h3>
+            <p>Hablo español con fluidez, por lo que puedo crear sitios en español.</p>
+        </div>
+    </div>
 </main>
 
 <footer>© 2025 Lucas Lara Peyrière – Todos los derechos reservados</footer>
 
 <script>
+// ================= THEME =================
 const toggle = document.querySelector('.theme-toggle');
 const langBtn = document.querySelector('.lang-toggle');
 
-/* ---------- THEME ---------- */
+// Recupera tema guardado
 const savedTheme = localStorage.getItem('theme');
-if(savedTheme==='dark'){ document.body.classList.add('dark'); toggle.textContent='☀️'; }
+if(savedTheme==='dark'){ 
+    document.body.classList.add('dark'); 
+    toggle.textContent='☀️'; 
+}
+
+// Cambiar tema
 toggle.addEventListener('click', ()=>{
     document.body.classList.toggle('dark');
     toggle.textContent=document.body.classList.contains('dark')?'☀️':'🌙';
     localStorage.setItem('theme',document.body.classList.contains('dark')?'dark':'light');
 });
+
+// Sincronización entre pestañas
 window.addEventListener('storage', e=>{
     if(e.key==='theme'){
         const isDark=e.newValue==='dark';
@@ -154,7 +323,7 @@ window.addEventListener('storage', e=>{
     }
 });
 
-/* ---------- ANIMACIONES ---------- */
+// ================= ANIMACIONES =================
 window.addEventListener('load', ()=>{
     const h1=document.querySelector('header h1');
     const h2=document.querySelector('main h2');
@@ -172,7 +341,7 @@ window.addEventListener('load', ()=>{
     });
 });
 
-/* ---------- LANGUE ---------- */
+// ================= IDIOMA =================
 const savedLang = localStorage.getItem('lang') || 'es';
 const page = window.location.pathname.split('/').pop();
 const pages = {
@@ -182,9 +351,13 @@ const pages = {
     contact: {fr:'contact_fr.html', es:'contacto_es.html'}
 };
 let currentKey=null;
-for(const key in pages){ if(Object.values(pages[key]).includes(page)){ currentKey=key; break; } }
+for(const key in pages){ 
+    if(Object.values(pages[key]).includes(page)){ currentKey=key; break; } 
+}
 langBtn.textContent = savedLang.toUpperCase();
-if(currentKey && pages[currentKey][savedLang]!==page){ window.location.replace(pages[currentKey][savedLang]); }
+if(currentKey && pages[currentKey][savedLang]!==page){ 
+    window.location.replace(pages[currentKey][savedLang]); 
+}
 langBtn.addEventListener('click', ()=>{
     const newLang = savedLang==='fr'?'es':'fr';
     localStorage.setItem('lang', newLang);
