--- a/projets_fr.html
+++ b/projets_fr.html
@@ -1,70 +1,86 @@
 <!DOCTYPE html>
+<!-- Indique que le document est en HTML5 -->
+
 <html lang="fr">
+<!-- Début du document HTML, langue principale : français -->
+
 <head>
 <meta charset="UTF-8">
+<!-- Encodage UTF-8 pour les caractères spéciaux -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Permet un design responsive sur mobile -->
+
 <title>Portfolio - Projets</title>
+<!-- Titre affiché dans l’onglet du navigateur -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<!-- Import de la police Poppins depuis Google Fonts -->
 
 <style>
+/* ================= VARIABLES GLOBALES ================= */
 :root {
-    --primary: #4f46e5;
-    --secondary: #ff6584;
-    --light-bg: #f5f5f5;
-    --dark-bg: #121212;
-    --light-card: #fff;
-    --dark-card: #1e1e1e;
-    --text-light: #222;
-    --text-dark: #e0e0e0;
-    --glow-light: rgba(79,70,229,0.5);
-    --glow-dark: rgba(255,101,132,0.6);
+    --primary: #4f46e5;           /* Couleur principale */
+    --secondary: #ff6584;         /* Couleur secondaire */
+    --light-bg: #f5f5f5;          /* Couleur de fond claire */
+    --dark-bg: #121212;           /* Couleur de fond sombre */
+    --light-card: #fff;           /* Fond des cartes clair */
+    --dark-card: #1e1e1e;         /* Fond des cartes sombre */
+    --text-light: #222;           /* Texte clair */
+    --text-dark: #e0e0e0;         /* Texte sombre */
+    --glow-light: rgba(79,70,229,0.5); /* Effet glow clair */
+    --glow-dark: rgba(255,101,132,0.6); /* Effet glow sombre */
 }
 
+/* Reset global */
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
+/* ================= BODY ================= */
 body {
-    font-family: 'Poppins', sans-serif;
-    background: var(--light-bg);
-    color: var(--text-light);
-    transition: 0.3s;
-    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif; /* Police principale */
+    background: var(--light-bg);        /* Fond clair par défaut */
+    color: var(--text-light);           /* Texte clair par défaut */
+    transition: 0.3s;                   /* Transition pour changement de thème */
+    overflow-x: hidden;                 /* Évite scroll horizontal */
 }
 body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
+/* ================= HEADER ================= */
 header {
-    position: fixed;
+    position: fixed;         /* Header fixe en haut */
     top: 0;
     width: 100%;
     padding: 20px 50px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    backdrop-filter: blur(12px);
-    background: rgba(255,255,255,0.9);
-    border-bottom: 1px solid #ccc;
-    z-index: 1000;
+    justify-content: space-between;    /* Espace entre titre et nav */
+    align-items: center;               /* Alignement vertical */
+    backdrop-filter: blur(12px);       /* Effet flou derrière header */
+    background: rgba(255,255,255,0.9); /* Fond semi-transparent */
+    border-bottom: 1px solid #ccc;     /* Ligne en bas */
+    z-index: 1000;                     /* Toujours au-dessus */
     transition: 0.3s;
 }
 body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
 
+/* Titre du header */
 header h1 {
     font-size: 1.8rem;
     font-weight: 700;
-    opacity: 0;
-    transform: translateY(40px);
+    opacity: 0;                     /* Masqué initialement */
+    transform: translateY(40px);    /* Déplacé vers le bas */
     transition: all 0.8s ease-out;
 }
 
+/* ================= NAV ================= */
 nav a {
-    margin-left: 30px;
-    color: inherit;
-    text-decoration: none;
+    margin-left: 30px;             /* Espacement entre liens */
+    color: inherit;                /* Couleur héritée du body */
+    text-decoration: none;         /* Supprime soulignement */
     font-weight: 500;
     position: relative;
-    opacity: 0;
-    transform: translateY(40px);
-    transition: all 0.8s ease-out;
+    opacity: 0;                    /* Masqué initialement */
+    transform: translateY(40px);   /* Déplacé vers le bas */
+    transition: all 0.8s ease-out; /* Animation d'apparition */
 }
 nav a::after {
     content: "";
@@ -79,13 +95,12 @@ nav a::after {
 body.dark nav a::after { background: var(--secondary); }
 nav a:hover::after, nav a.active::after { width: 100%; }
 
-/* ---------- BOUTONS THEME & LANGUE ---------- */
+/* ================= BOUTONS THEME & LANGUE ================= */
 .header-buttons {
     display: flex;
     gap: 10px;
     align-items: center;
 }
-
 .theme-toggle, .lang-toggle {
     padding: 10px 20px;
     border-radius: 50px;
@@ -104,6 +119,7 @@ body.dark .theme-toggle:hover, body.dark .lang-toggle:hover {
     box-shadow: 0 0 30px var(--glow-dark);
 }
 
+/* ================= MAIN ================= */
 main {
     min-height: 100vh;
     padding: 140px 20px 50px;
@@ -113,9 +129,9 @@ main {
     justify-content: center;
     text-align: center;
 }
-
 section { width: 100%; max-width: 1000px; }
 
+/* Titre de section */
 section h2 {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -132,6 +148,7 @@ body.dark h2.show {
     text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark);
 }
 
+/* Grille des cartes */
 .cards {
     width: 100%;
     display: grid;
@@ -140,6 +157,7 @@ body.dark h2.show {
     margin-top: 20px;
 }
 
+/* Carte individuelle */
 .card {
     background: var(--light-card);
     padding: 30px;
@@ -167,6 +185,7 @@ body.dark .card:hover { box-shadow: 0 15px 35px var(--glow-dark); }
 }
 .card h3.show, .card p.show { opacity: 1; transform: translateY(0); }
 
+/* ================= FOOTER ================= */
 footer {
     text-align: center;
     padding: 30px 0;
@@ -179,6 +198,7 @@ footer {
 body.dark footer { border-color: #333; }
 footer.show { opacity: 1; transform: translateY(0); }
 
+/* ================= RESPONSIVE ================= */
 @media(max-width:768px) {
     header { padding: 15px 20px; }
     nav a { margin-left: 15px; font-size: 0.9rem; }
@@ -190,12 +210,14 @@ footer.show { opacity: 1; transform: translateY(0); }
 
 <header>
     <h1>Lucas Lara Peyrière</h1>
+    <!-- Navigation principale -->
     <nav>
         <a href="accueil_fr.html">Accueil</a>
         <a href="competences_fr.html">Compétences</a>
         <a href="projets_fr.html" class="active">Projets</a>
         <a href="contact_fr.html">Contact</a>
     </nav>
+    <!-- Boutons thème et langue -->
     <div class="header-buttons">
         <button class="theme-toggle">🌙</button>
         <button class="lang-toggle">ES</button>
@@ -230,10 +252,10 @@ footer.show { opacity: 1; transform: translateY(0); }
 <footer>© 2025 Lucas Lara Peyrière – Tous droits réservés</footer>
 
 <script>
+/* ================= THEME ================= */
 const toggle = document.querySelector('.theme-toggle');
 const langBtn = document.querySelector('.lang-toggle');
 
-/* ---------- THEME ---------- */
 const savedTheme = localStorage.getItem('theme');
 if (savedTheme === 'dark') {
   document.body.classList.add('dark');
@@ -252,7 +274,7 @@ window.addEventListener('storage', (e) => {
   }
 });
 
-/* ---------- ANIMATIONS ---------- */
+/* ================= ANIMATIONS ================= */
 window.addEventListener('load', () => {
   const headerH1 = document.querySelector('header h1');
   const navLinks = document.querySelectorAll('nav a');
@@ -260,14 +282,18 @@ window.addEventListener('load', () => {
   const cards = document.querySelectorAll('.card');
   const footer = document.querySelector('footer');
 
+  // Animation du titre header
   setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
 
+  // Animation des liens nav
   navLinks.forEach((link, i) => {
     setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i * 100);
   });
 
+  // Animation du titre section
   setTimeout(() => { h2.classList.add('show'); }, 900);
 
+  // Animation des cartes
   cards.forEach((card, i) => {
     setTimeout(() => {
       card.classList.add('show');
@@ -278,10 +304,11 @@ window.addEventListener('load', () => {
     }, 1100 + i * 200);
   });
 
+  // Animation footer
   setTimeout(() => { footer.classList.add('show'); }, 2000);
 });
 
-/* ---------- LANGUE (FR / ES) ---------- */
+/* ================= LANGUE (FR / ES) ================= */
 const savedLang = localStorage.getItem('lang') || 'fr';
 const page = window.location.pathname.split('/').pop();
 const pages = {
